Readability and bug fixes

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -56,19 +56,20 @@ nav ul{
  nav{
   float: left;
   width: 175px;
-  box-sizing: border-box;
   -moz-box-sizing:border-box;
+  box-sizing: border-box;
 }
 #content{
   float: left;
   width: 625px;
-  box-sizing: border-box;
   -moz-box-sizing:border-box;
+  box-sizing: border-box;
 }
 
 #sidebar{
   float: left;
   width:160px;
+  -moz-box-sizing:border-box;
   box-sizing: border-box;
 }
 
